results/SpecGenBench/2-shot/log-PowerOfFourLoop-2023_11_28_14_57_20.txt
class PowerOfTwoLoop {
    //@ ensures \result == true <==> n > 0 && (\exists int i; i >= 0 && n == 4^i);
    public boolean isPowerOfTwo(int n) {
        if(n <= 0) {
            return false;
        }
        //@ maintaining n > 0 && (\forall int i; i >= 0 && i < \old(n/n) - n/n; n % 4^i != 0);
        //@ decreases n;
        while (n % 4 == 0) {
            n /= 4;
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PowerOfFourLoop.java:2: error: bad operand types for binary operator '^'
    //@ ensures \result == true <==> n > 0 && (\exists int i; i >= 0 && n == 4^i);
                                                                              ^
  first type:  boolean
  second type: int
/home/max/Documents/JMLGPT/tmp/PowerOfFourLoop.java:7: error: bad operand types for binary operator '^'
        //@ maintaining n > 0 && (\forall int i; i >= 0 && i < \old(n/n) - n/n; n % 4^i != 0);
                                                                                     ^
  first type:  int
  second type: boolean
2 errors

